--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>HypercraftSMP</title>
+    <title>Hypercraft SMP</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2761b095f6.js" crossorigin="anonymous"></script>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/mdb.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+<meta name="theme-color" content="#eb9d17">
+<meta name="title" content="Hypercraft SMP ">
+<meta name="description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hypercraftmc.xyz">
+<meta property="og:title" content="Hypercraft SMP">
+<meta property="og:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
+<meta property="og:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://hypercraftmc.xyz">
+<meta property="twitter:title" content="Hypercraft SMP">
+<meta property="twitter:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
+<meta property="twitter:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
+
 </head>
 
 <body>
