--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/mdb.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
 
 <meta name="theme-color" content="#eb9d17">
 <meta name="title" content="Hypercraft SMP ">
