--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/mdb.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <!--SCROLL ANIMATION LIBRARY-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!--SCROLL ANIMATION LIBRARY-->
+
     <link rel="icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
 
+<!--EMBED-->
 <meta name="theme-color" content="#eb9d17">
 <meta name="title" content="Hypercraft SMP ">
 <meta name="description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
@@ -29,6 +36,7 @@
 <meta property="twitter:title" content="Hypercraft SMP">
 <meta property="twitter:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
 <meta property="twitter:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
+<!--EMBED-->
 
 </head>
 
@@ -73,7 +81,7 @@
 </header>
   <main class="mt-5">
     <section id="specs">
-      <div class="container">
+      <div class="container" data-aos="zoom-in-down" data-aos-delay="300">
           <section id="server-specs">
             <section id="server-specs" class="text-center">
 
@@ -86,25 +94,26 @@
                     </div>
 
                 </div>
-                <div class="row">
-                    <div class="col-md-4 mb-1">
+                <div class="row" > 
+                    <div class="col-md-4 mb-1" data-aos="zoom-in-right" data-aos-delay="300">
+                        <div data-aos="fade-left"></div>
                         <i class="fas fa-microchip fa-3x orange-text"></i>
                         <h4 class="my-4">CPU</h4>
                         <p>The current cpu we are using is a <B>AMD Ryzen 5 3600</B> with 1 core.</p>
                     </div>
-                    <div class="col-md-4 mb-1">
+                    <div class="col-md-4 mb-1" data-aos="zoom-in-up" data-aos-delay="300"> 
                         <i class="fas fa-memory fa-3x orange-text" ></i>
                         <h4 class="my-4">RAM</h4>
                         <p>RAM is very important to keep the server running and is a big contribution to make sure we try to keep the server running as smoothly as possible which is why we have <b>6GB of DDR4 Memory</b></p>
                     </div>
-                    <div class="col-md-4 mb-1">
+                    <div class="col-md-4 mb-1" data-aos="zoom-in-left" data-aos-delay="300">
                         <i class="far fa-hdd fa-3x orange-text"></i>
                         <h4 class="my-4">Storage</h4>
                         <p>It is without a dought that with a 50k world border we need a lot of storage which is why we have <b>50GB of NVMe SSD Storage</b></p>
                     </div>
                     <main class="mt-5">
                         <section id="whitelist">
-                          <div class="container">
+                          <div class="container" data-aos="fade-down">
                               <section id="whitelist">
                                 <section id="whitelist" class="text-center">
                     
@@ -119,18 +128,18 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-4 mb-1">
+                                        <div class="col-md-4 mb-1" data-aos="fade-right">
                                             <i class="fab fa-discord fa-3x red-text"></i>
                                             <h4 class="my-4">Join the discord</h4>
                                             <p>Join the discord with the button below.</p>
                                             <a class="btn btn-outline-black" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Discord</a>
                                         </div>
-                                        <div class="col-md-4 mb-1">
+                                        <div class="col-md-4 mb-1" data-aos="fade-up">
                                             <i class="far fa-comment-alt fa-3x red-text" ></i>
                                             <h4 class="my-4">Find the #bot-cmds chat</h4>
                                             <p>Once your in the discord look for the #bot-cmds chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you a bunch of questions. After you answer them all give the mods some time and they will look it over!</p>
                                         </div>
-                                        <div class="col-md-4 mb-1">
+                                        <div class="col-md-4 mb-1" data-aos="fade-left">
                                             <i class="fas fa-server fa-3x red-text"></i>
                                             <h4 class="my-4">Join the server!</h4>
                                             <p>Once accepted you <b>must</b> go to #info and read all the rules in there you will also find the server IP adress and you can join from there! Have fun!</p>
@@ -154,8 +163,13 @@
 </body>
 
 </html>
-            
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>            
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/mdb.min.js"></script>
+
+<script>   
+    AOS.init(); 
+ </script>
