--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <div class="col-md-10">
                       <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">Hypercraft</h2>
                       <hr class="hr-light">
-                      <h4 class="white-text my-4">Hi there, We are HypercraftSMP a whitelisted <b>Vanilla</b> Minecraft server. </h4>
+                      <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
                       <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
                   </div>
               </div>
