Re-Wrote the specs sentence

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                 <div class="row d-flex justify-content-center mb-4">
                     <div class="col-md-8">
-                        <p>We want to keep the server as lag free as we possible can, with donations we can help keep the running for as long as we can. We thank you guys. Here are the specs of our server.</p>
+                        <p>Specs are very important to a good Minecraft Server. Due to donations we are thankful to allow us to continue with these amazing specs!</p>
 
                     </div>
 
