Ram Sentence re-write

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="col-md-4 mb-1" data-aos="zoom-in-up" data-aos-delay="300"> 
                         <i class="fas fa-memory fa-3x orange-text" ></i>
                         <h4 class="my-4">RAM</h4>
-                        <p>RAM is very important to keep the server running and is a big contribution to make sure we try to keep the server running as smoothly as possible which is why we have <b>6GB of DDR4 Memory</b></p>
+                        <p>RAM is very important to keep the server running as smoothly as possible which is why we have <b>6GB of DDR4 Memory</b></p>
                     </div>
                     <div class="col-md-4 mb-1" data-aos="zoom-in-left" data-aos-delay="300">
                         <i class="far fa-hdd fa-3x orange-text"></i>
