Storage & Bot Sentence

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-md-4 mb-1" data-aos="zoom-in-left" data-aos-delay="300">
                         <i class="far fa-hdd fa-3x orange-text"></i>
                         <h4 class="my-4">Storage</h4>
-                        <p>It is without a dought that with a 50k world border we need a lot of storage which is why we have <b>50GB of NVMe SSD Storage</b></p>
+                        <p>It is without a dought that with a 50k world border we need a lot of storage, our storage is <b>50GB of NVMe SSD Storage</b></p>
                     </div>
                     <main class="mt-5">
                         <section id="whitelist">
@@ -137,7 +137,7 @@
                                         <div class="col-md-4 mb-1" data-aos="fade-up">
                                             <i class="far fa-comment-alt fa-3x red-text" ></i>
                                             <h4 class="my-4">Find the #bot-cmds chat</h4>
-                                            <p>Once your in the discord look for the #bot-cmds chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you a bunch of questions. After you answer them all give the mods some time and they will look it over!</p>
+                                            <p>Once your in the discord look for the #bot-cmds chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you some of questions. After you answer them all give the mods some time and they will look it over!</p>
                                         </div>
                                         <div class="col-md-4 mb-1" data-aos="fade-left">
                                             <i class="fas fa-server fa-3x red-text"></i>
