Add player count and fix #info

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                       <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">Hypercraft</h2>
                       <hr class="hr-light">
                       <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
+
+                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online </h4>
+
                       <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
                   </div>
               </div>
@@ -100,6 +103,7 @@
                         <i class="fas fa-microchip fa-3x orange-text"></i>
                         <h4 class="my-4">CPU</h4>
                         <p>The current cpu we are using is a <B>AMD Ryzen 5 3600</B> with 1 core.</p>
+                        
                     </div>
                     <div class="col-md-4 mb-1" data-aos="zoom-in-up" data-aos-delay="300"> 
                         <i class="fas fa-memory fa-3x orange-text" ></i>
@@ -142,7 +146,7 @@
                                         <div class="col-md-4 mb-1" data-aos="fade-left">
                                             <i class="fas fa-server fa-3x red-text"></i>
                                             <h4 class="my-4">Join the server!</h4>
-                                            <p>Once accepted you <b>must</b> go to #info and read all the rules in there you will also find the server IP adress and you can join from there! Have fun!</p>
+                                            <p>Once accepted you <b>must</b> go to <code>#info</code> and read all the rules in there you will also find the server IP adress and you can join from there! Have fun!</p>
                                         </div>
                                         
                                   </section>
@@ -171,6 +175,7 @@
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/mdb.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
 
 <script>   
     AOS.init(); 
