--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
     <link rel="icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '701803485221355571',
+    channel: '701803485221355574'
+  })
+    </script>
+
 
 <!--EMBED-->
 <meta name="theme-color" content="#eb9d17">
