--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
     <link rel="icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
     
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-  new Crate({
-    server: '701803485221355571',
-    channel: '701803485221355574'
-  })
-    </script>
 
 
 <!--EMBED-->
@@ -45,7 +39,14 @@
 <meta property="twitter:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
 <meta property="twitter:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
 <!--EMBED-->
-
+    
+<!--WidgetBot-->
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '701803485221355571',
+    channel: '701803485221355574'
+  })
+</script>
 </head>
 
 <body>
