--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!--SCROLL ANIMATION LIBRARY-->
 
-    <link rel="icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
-<link rel="shortcut icon" href="https://hypercraftmc.xyz/Hypercraft-small.png" type="image/x-icon"/>
+    <link rel="icon" href="/img/Hypercraft-small.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="/img/Hypercraft-small.png" type="image/x-icon"/>
     
 
 
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><i class="fa fa-twitter"></i></a>
+                    <a class="nav-link" href="#"><i class="fa fa-twitter"></i></a>
                 </li>
                 
             </ul>
@@ -122,7 +122,7 @@
                     <div class="col-md-4 mb-1" data-aos="zoom-in-left" data-aos-delay="300">
                         <i class="far fa-hdd fa-3x orange-text"></i>
                         <h4 class="my-4">Storage</h4>
-                        <p>It is without a dought that with a 50k world border we need a lot of storage, our storage is <b>50GB of NVMe SSD Storage</b></p>
+                        <p>It is without a doubt that with a 50k world border we need a lot of storage, our storage is <b>50GB of NVMe SSD Storage</b></p>
                     </div>
                     <main class="mt-5">
                         <section id="whitelist">
@@ -149,8 +149,8 @@
                                         </div>
                                         <div class="col-md-4 mb-1" data-aos="fade-up">
                                             <i class="far fa-comment-alt fa-3x red-text" ></i>
-                                            <h4 class="my-4">Find the #bot-cmds chat</h4>
-                                            <p>Once your in the discord look for the #bot-cmds chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you some of questions. After you answer them all give the mods some time and they will look it over!</p>
+                                            <h4 class="my-4">Find the <code>#bot-cmds</code> chat</h4>
+                                            <p>Once your in the discord look for the <code>#bot-cmds</code> chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you some of questions. After you answer them all give the mods some time and they will look it over!</p>
                                         </div>
                                         <div class="col-md-4 mb-1" data-aos="fade-left">
                                             <i class="fas fa-server fa-3x red-text"></i>
