--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               &copy; 2020-2021 <a href="https://hypercraftmc.xyz" class="orange-text" target="_blank">HypercraftSMP</a>.
              <br><br>
             </footer>
-</body>
+</body>w
 
 
 <!--:)-->
