--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                    <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
               <div class="copyright">
-              &copy; 2020-2021 <a href="https://hypercraftmc.xyz" class="orange-text" target="_blank">HypercraftSMP</a>.
+              &copy; 2019-2021 <b href="https://hypercraftmc.xyz" class="orange-text" target="_blank">HypercraftSMP</b>.
              <br><br>
             </footer>
 </body>
