Attempt fix on spacing

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="container" data-aos="zoom-in-down" data-aos-delay="300">
           <section id="server-specs">
             <section id="server-specs" class="text-center">
-
+                <h2 class="mb-5 white-text">    </h2>
                 <h2 class="mb-5 white-text">Server Specs</h2>
 
                 <div class="row d-flex justify-content-center mb-4">
