Dear gods, make this bugfix fix itself

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2761b095f6.js" crossorigin="anonymous"></script>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="https://hypercraftmc.xyz/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://hypercraftmc.xyz/css/mdb.min.css" rel="stylesheet">
+    <link href="https://hypercraftmc.xyz/css/style.css" rel="stylesheet">
 
 
     <!--Carrosel-->
