--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 </html>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/mdb.min.js"></script>
+<script type="text/javascript" src="https://hypercraftmc.xyz/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://hypercraftmc.xyz/js/popper.min.js"></script>
+<script type="text/javascript" src="https://hypercraftmc.xyz/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://hypercraftmc.xyz/js/mdb.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
 
 <script>
