--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
 <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
 
 <script>
+
+    console.log("Develop - 01")
+</script>
+<script>
     AOS.init();
  </script>
 
