--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2761b095f6.js" crossorigin="anonymous"></script>
 
-    <link href="https://hypercraftmc.xyz/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://hypercraftmc.xyz/css/mdb.min.css" rel="stylesheet">
-    <link href="https://hypercraftmc.xyz/css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/mdb.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
 
     <!--Carrosel-->
@@ -312,10 +312,10 @@
 </html>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="https://hypercraftmc.xyz/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="https://hypercraftmc.xyz/js/popper.min.js"></script>
-<script type="text/javascript" src="https://hypercraftmc.xyz/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://hypercraftmc.xyz/js/mdb.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/js/popper.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/mdb.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
 
 <script>
