--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       <hr class="hr-light">
                       <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
 
-                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online DEVELOPMENT!!!</h4>
+                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online</h4>
 
                       <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
                   </div>
