--- a/index.html
+++ b/index.html
@@ -233,8 +233,12 @@
 
                                                                                      <p>"I think Liam got oofed"</p>
                                                                      <p><font style="color:#fcd000; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">IsMeGrady - 04/23/2020</font></p>
-                                                                </div>
+                                                                    </div>
+                                                                     <div class="carousel-item text-center p-4 white-text">
 
+                                                                        <p>"Ding dong the C**T is dead"</p>
+                                                        <p><font style="color:#fcd000; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">Timinasweater - 12/1/2020</font></p>
+                                                       </div>
 
 
                                                  </div>
