maybe fixed navbar
maybe fixed navbar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="position: fixed;">
 
         <div class="container">
             <a class="navbar-brand" href="#">HypercraftSMP</a>
@@ -276,7 +276,7 @@
 
                                         <p class="footer-company-name">© 2019-2021 HypercraftSMP</p>
                                     </div>
-                                    
+
 
 
                                     <div class="footer-right">
