css not updating fix
smh

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2761b095f6.js" crossorigin="anonymous"></script>
 
-    <link href="https://hypercraftmc.xyz/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://hypercraftmc.xyz/css/mdb.min.css" rel="stylesheet">
-    <link href="https://hypercraftmc.xyz/css/style.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/mdb.min.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 
     <!--Carrosel-->
@@ -58,7 +58,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="position: fixed;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="position: fixed; ">
 
         <div class="container">
             <a class="navbar-brand" href="#">HypercraftSMP</a>
@@ -80,8 +80,12 @@
     </nav>
 <div id="intro" class="view">
   <div id = "intro" class="view">
+    <!-- images for slideshow-->
     <div id = "image2" class = "slideImage"></div>
+    <div id = "image4" class = "slideImage"></div>
+    <div id = "image5" class = "slideImage"></div>
     <div id = "image3" class = "slideImage"></div>
+
       <div class="mask rgba-black-strong" style = "z-index: 10;">
           <div class="container-fluid d-flex align-items-center justify-content-center h-100">
               <div class="row d-flex justify-content-center text-center">
