--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2761b095f6.js" crossorigin="anonymous"></script>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/mdb.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/mdb.min.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 
     <!--Carrosel-->
@@ -58,11 +58,7 @@
 
 <body>
   <header>
-<<<<<<< HEAD
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style = "position: fixed;">
-=======
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="position: fixed; ">
->>>>>>> master
 
         <div class="container">
             <a class="navbar-brand" href="#">HypercraftSMP</a>
@@ -98,11 +94,7 @@
                       <hr class="hr-light">
                       <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
 
-<<<<<<< HEAD
-                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online</h4>
-=======
                       <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online DEVELOP</h4>
->>>>>>> master
 
                       <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
                   </div>
@@ -245,12 +237,8 @@
 
                                                                                      <p>"I think Liam got oofed"</p>
                                                                      <p><font style="color:#fcd000; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">IsMeGrady - 04/23/2020</font></p>
-                                                                    </div>
-                                                                     <div class="carousel-item text-center p-4 white-text">
+                                                                </div>
 
-                                                                        <p>"Ding dong the C**T is dead"</p>
-                                                        <p><font style="color:#fcd000; font-size:14px; text-transform: uppercase; font-weight: bold; font-style:italic">Timinasweater - 12/1/2020</font></p>
-                                                       </div>
 
 
                                                  </div>
@@ -328,16 +316,12 @@
 </html>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/mdb.min.js"></script>
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="js/popper.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/mdb.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
 
-<script>
-
-    console.log("Develop - 01")
-</script>
 <script>
     AOS.init();
  </script>
