spelling and stuff

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">Hypercraft</h2>
                       <hr class="hr-light">
                       <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
-
+                      <!--Develop this part more. Develop part removed from published HTML-->
                       <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz">0</span></b> players online DEVELOP</h4>
 
                       <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
@@ -120,7 +120,7 @@
 
                 <div class="row d-flex justify-content-center mb-4">
                     <div class="col-md-8 white-text">
-                        <p>Specs are very important to a good Minecraft Server. Due to donations we are thankful to allow us to continue with these amazing specs!</p>
+                        <p>Specs are very important to a good Minecraft Server. Due to donations, we are thankfully able to continue with these amazing specs!</p>
 
                     </div>
 
@@ -130,7 +130,7 @@
                         <div data-aos="fade-left"></div>
                         <i class="fas fa-microchip fa-3x orange-text"></i>
                         <h4 class="my-4">CPU</h4>
-                        <p>The current cpu we are using is a <B>AMD Ryzen 5 3600</B> with 1 core.</p>
+                        <p>The current cpu we are using is a <B>AMD Ryzen 5 3600</B> with 1 core allocated.</p>
 
                     </div>
                     <div class="col-md-4 mb-1 white-text" data-aos="zoom-in-up" data-aos-delay="300">
@@ -169,12 +169,12 @@
                                         <div class="col-md-4 mb-1 white-text" data-aos="fade-up">
                                             <i class="far fa-comment-alt fa-3x red-text" ></i>
                                             <h4 class="my-4">Find the <code>#bot-cmds</code> chat</h4>
-                                            <p>Once your in the discord look for the <code>#bot-cmds</code> chat and type <CODE>-apply</CODE>, now you will see a new channel and the bot will ask you some of questions. After you answer them all give the mods some time and they will look it over!</p>
+                                            <p>Once your in the discord look for the <code>#bot-cmds</code> chat and type <CODE>-apply</CODE>. Now you will see a new channel and the bot will ask you some questions. After you answer them all, give the mods some time and they will look it over!</p>
                                         </div>
                                         <div class="col-md-4 mb-1 white-text" data-aos="fade-left">
                                             <i class="fas fa-server fa-3x red-text"></i>
                                             <h4 class="my- white-text4">Join the server!</h4>
-                                            <p>Once accepted you <b>must</b> go to <code>#info</code> and read all the rules in there you will also find the server IP adress and you can join from there! Have fun!</p>
+                                            <p>Once accepted you <b>must</b> go to <code>#info</code> and read all the rules in there. You will also find the server IP adress and you can join with that! Have fun!</p>
                                         </div>
 
 
@@ -286,7 +286,7 @@
                                     <div class="footer-right">
                                         <p class="footer-company-about text-white">
                                             <span>About Hypercraft</span>
-                                            We are a small growing community of Minecrafters who just like to play the game how the game was ment to be played, No mods, No Plugins just the vanilla game.</p>
+                                            We are a small growing community of Minecrafters who just like to play the game how the game was ment to be played, no mods, no plugins just the vanilla game.</p>
                                         <div class="footer-icons">
                                             <a href="#"><i class="fab fa-discord"></i></a>
                                             <a href="#"><i class="fa fa-twitter"></i></a>
