mc-player-counter now local

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/mdb.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
+<script type="text/javascript" src="js/mc-player-counter.min.js"></script>
 
 <script>
     AOS.init();
