--- a/404.html
+++ b/404.html
@@ -180,7 +180,7 @@
 		  </div> -->
 	
 		  <div id="navigation">
-			<a class="navigation" href="">Home</a><!--<a class="navigation" href="">About
+			<a class="navigation" href="https://hypercraftmc.xyz/">Home</a><!--<a class="navigation" href="">About
 			Us</a>
 			<a class="navigation" href="">Site Map</a>
 			<a class="navigation" href=
