--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
     channel: '701803485221355574'
   })
 </script>
+<!--Redirect-->
+<script>
+
+if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+window.location.replace("mobile.html");
+} else{
+return
+}
+
+</script>
 </head>
 
 <body>
@@ -325,6 +335,3 @@
 <script>
     AOS.init();
  </script>
-
-
-
