--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
     channel: '701803485221355574'
   })
 </script>
+<!--Redirect-->
+<script>
+
+if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+window.location.replace("mobile.html");
+} else{
+return
+}
 </head>
 
 <body>
@@ -658,4 +666,3 @@
 <script>
     AOS.init();
  </script>
-
