--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 </script>
 <!--Redirect-->
 <script>
-
-if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+jQuery.browser.mobile (http://detectmobilebrowser.com/)
+if(jQuery.browser.mobile{
 window.location.replace("mobile.html");
 } else{
 return
