--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 <body>
   <!--Redirect-->
   <script language="javascript">
-
-    if(!window.location.search.substring(1) == "full=true") { // do not redirect if querystring is ?full=true
-      if (navigator.userAgent.match(/iPhone/i) || navigator.userAgent.match(/iPad/i) || navigator.userAgent.match(/Android/i) || navigator.userAgent.match(/Blackberry/i) || navigator.userAgent.match(/WebOs/i)) { // detect mobile browser
-        window.location.replace("http://hypercraftmc.xyz/mobile.html"); // redirect if mobile browser detected
+    document.addEventListener("DOMContentLoaded", function(){}
+      if(!window.location.search.substring(1) == "full=true") { // do not redirect if querystring is ?full=true
+        if (navigator.userAgent.match(/iPhone/i) || navigator.userAgent.match(/iPad/i) || navigator.userAgent.match(/Android/i) || navigator.userAgent.match(/Blackberry/i) ||      navigator.userAgent.match(/WebOs/i)) { // detect mobile browser
+          window.location.replace("http://hypercraftmc.xyz/mobile.html"); // redirect if mobile browser detected
+        }
       }
     }
 
