--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="collapse navbar-collapse" id="basicExampleNav">
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i></a>
+                    <a class="nav-link" href="https://discord.gg/uYRS3kmaQ4"><i class="fab fa-discord"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa fa-twitter"></i></a>
@@ -105,9 +105,9 @@
                       <hr class="hr-light">
                       <h4 class="white-text my-4">Hi there, We are HypercraftSMP, a whitelisted <b>Vanilla</b> Minecraft server. </h4>
 
-                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="mc.hypercraftmc.xyz"><i class="fas fa-spinner fa-spin"></i></span></b> players online</h4>
+                      <h4 class="white-text my-4">With currently <b><span data-playercounter-ip="23.185.17.179:50000"><i class="fas fa-spinner fa-spin"></i></span></b> players online</h4>
 
-                      <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Join the discord</a>
+                      <a class="btn btn-outline-white" href="https://discord.gg/uYRS3kmaQ4"><i class="fab fa-discord"></i> Join the discord</a>
                   </div>
               </div>
           </div>
@@ -175,7 +175,7 @@
                                             <i class="fab fa-discord fa-3x red-text "></i>
                                             <h4 class="my-4 white-text">Join the discord</h4>
                                             <p>Join the discord with the button below.</p>
-                                            <a class="btn btn-outline-white" href="https://discord.gg/rAS8wSE"><i class="fab fa-discord"></i> Discord</a>
+                                            <a class="btn btn-outline-white" href="https://discord.gg/uYRS3kmaQ4"><i class="fab fa-discord"></i> Discord</a>
                                         </div>
                                         <div class="col-md-4 mb-1 white-text" data-aos="fade-up">
                                             <i class="far fa-comment-alt fa-3x red-text" ></i>
