Fixed The Widget
To have the right server / channel ID for it to work as intended

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <!--WidgetBot-->
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
   new Crate({
-    server: '701803485221355571',
-    channel: '701803485221355574'
+    server: '917268542309666847',
+    channel: '917268542804615201'
   })
 </script>
 </head>
@@ -141,7 +141,7 @@
                         <div data-aos="fade-left"></div>
                         <i class="fas fa-microchip fa-3x orange-text"></i>
                         <h4 class="my-4">CPU</h4>
-                        <p>The current cpu we are using is a <B>AMD Ryzen 5 3600</B> with 1 core allocated</p>
+                        <p>The current cpu we are using is a <B>AMD Ryzen 7 3900x</B> with 3 cores allocated</p>
 
                     </div>
                     <div class="col-md-4 mb-1 white-text" data-aos="zoom-in-up" data-aos-delay="300">
@@ -152,7 +152,7 @@
                     <div class="col-md-4 mb-1 white-text" data-aos="zoom-in-left" data-aos-delay="300">
                         <i class="far fa-hdd fa-3x orange-text"></i>
                         <h4 class="my-4">Storage</h4>
-                        <p>It is without a doubt that with a 50k world border we need a lot of storage, our storage is <b>50GB of NVMe SSD Storage</b></p>
+                        <p>It is without a doubt that with a 10x10k world border we need a lot of storage, our storage is <b>100GB of NVMe SSD Storage</b></p>
                     </div>
                     <main class="mt-5">
                         <section id="whitelist">
