--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <meta property="og:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
 <meta property="og:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://hypercraftmc.xyz">
+<meta property="twitter:url" content="https://twitter.com/hyper_smp">
 <meta property="twitter:title" content="Hypercraft SMP">
 <meta property="twitter:description" content="Welcome to Hypercraft, a whitelisted SMP for Minecraft">
 <meta property="twitter:image" content="https://hypercraftmc.xyz/img/Hypercraft-big.png">
