--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                     <a class="nav-link" href="https://discord.gg/uYRS3kmaQ4"><i class="fab fa-discord"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-twitter"></i></a>
-                </li>
+                    <a class="nav-link" href="https://twitter.com/hyper_smp"><i class="fa fa-twitter"></i></a>                </li>
 
             </ul>
         </div>
